; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/math/extr_cabs.c__cabs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/math/extr_cabs.c__cabs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._complex = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @_cabs(i64 %0) #0 {
  %2 = alloca %struct._complex, align 4
  %3 = bitcast %struct._complex* %2 to i64*
  store i64 %0, i64* %3, align 4
  %4 = getelementptr inbounds %struct._complex, %struct._complex* %2, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = getelementptr inbounds %struct._complex, %struct._complex* %2, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = mul nsw i32 %5, %7
  %9 = getelementptr inbounds %struct._complex, %struct._complex* %2, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds %struct._complex, %struct._complex* %2, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = mul nsw i32 %10, %12
  %14 = add nsw i32 %8, %13
  %15 = call double @sqrt(i32 %14)
  ret double %15
}

declare dso_local double @sqrt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
